package integration

import (
	"context"
	"fmt"
	"testing"

	"github.com/seaweedfs/seaweedfs/weed/pb/schema_pb"
)

// TestSeaweedMQHandler wraps SeaweedMQHandler for testing
type TestSeaweedMQHandler struct {
	handler *SeaweedMQHandler
	t       *testing.T
}

// NewTestSeaweedMQHandler creates a new test handler with in-memory storage
func NewTestSeaweedMQHandler(t *testing.T) *TestSeaweedMQHandler {
	// For now, return a stub implementation
	// Full implementation will be added when needed
	return &TestSeaweedMQHandler{
		handler: nil,
		t:       t,
	}
}

// ProduceMessage produces a message to a topic partition
func (h *TestSeaweedMQHandler) ProduceMessage(ctx context.Context, topic, partition string, record *schema_pb.RecordValue, key []byte) error {
	// This will be implemented to use the handler's produce logic
	// For now, return a placeholder
	return fmt.Errorf("ProduceMessage not yet implemented")
}

// CommitOffset commits an offset for a consumer group
func (h *TestSeaweedMQHandler) CommitOffset(ctx context.Context, consumerGroup string, topic string, partition int32, offset int64, metadata string) error {
	// This will be implemented to use the handler's offset commit logic
	return fmt.Errorf("CommitOffset not yet implemented")
}

// FetchOffset fetches the committed offset for a consumer group
func (h *TestSeaweedMQHandler) FetchOffset(ctx context.Context, consumerGroup string, topic string, partition int32) (int64, string, error) {
	// This will be implemented to use the handler's offset fetch logic
	return -1, "", fmt.Errorf("FetchOffset not yet implemented")
}

// FetchMessages fetches messages from a topic partition starting at an offset
func (h *TestSeaweedMQHandler) FetchMessages(ctx context.Context, topic string, partition int32, startOffset int64, maxBytes int32) ([]*Message, error) {
	// This will be implemented to use the handler's fetch logic
	return nil, fmt.Errorf("FetchMessages not yet implemented")
}

// Cleanup cleans up test resources
func (h *TestSeaweedMQHandler) Cleanup() {
	// Cleanup resources when implemented
}

// Message represents a fetched message
type Message struct {
	Offset int64
	Key    []byte
	Value  []byte
}
